--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2.4.4
+    2017-03-17
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #87: fix php 7 argument exception in ViewHelper
+
 2.4.3
     2017-02-18
     Daniel Lorenz <daniel.lorenz@extco.de>
