--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 3.0.0
-    2017-03-06
+    2017-03-17
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * TASK #63: add quantity discounts / graduated prices for products
@@ -20,6 +20,7 @@
     * TASK #66: update payment and shipping in backend module
     * BUGFIX #84: error in display condition of ProductPlugin.xml flexform
     * TASK #49: payment method needs return url
+    * BUGFIX #87: fix php 7 argument exception in ViewHelper
 
 2.4.3
     2017-02-18
