--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.1.0
+    2017-04-04
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #89: shipping for virtual products should be free
+
 3.0.1
     2017-03-26
     Daniel Lorenz <daniel.lorenz@extco.de>
