[TASK] #95 - indexer for ke_search

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.2.0
+    2017-04-11
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #95: indexer for ke_search
+
 3.1.1
     2017-04-05
     Daniel Lorenz <daniel.lorenz@extco.de>
