[TASK] #96 - change configurations to TYPO3 LTS version

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.2.1
+    2017-04-11
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #96: change configurations to TYPO3 LTS version
+
 3.2.0
     2017-04-11
     Daniel Lorenz <daniel.lorenz@extco.de>
