--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.3.0
+    2017-04-13
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #97: add gitlab-ci configuration
+
 3.2.1
     2017-04-11
     Daniel Lorenz <daniel.lorenz@extco.de>
