--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.6.2
+    2017-06-11
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #107: add php-cs-fixer to travis and fix it for gitlab-ci
+
 3.6.1
     2017-06-11
     Daniel Lorenz <daniel.lorenz@extco.de>
