--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.7.0
+    2017-06-11
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #108: add functional testing to travis ci and gitlab ci
+
 3.6.2
     2017-06-11
     Daniel Lorenz <daniel.lorenz@extco.de>
