--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.8.0
+    2017-06-13
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #109: make images and files available in translation
+
 3.7.0
     2017-06-11
     Daniel Lorenz <daniel.lorenz@extco.de>
