[TASK] #111 - add more products to teaser view and allow sorting them

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.10.0
+    2017-06-15
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #111: add more products to teaser view and allow sorting them
+
 3.9.0
     2017-06-13
     Daniel Lorenz <daniel.lorenz@extco.de>
