--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.11.0
+    2017-06-15
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #112: add cache tag for product controller actions
+
 3.10.0
     2017-06-15
     Daniel Lorenz <daniel.lorenz@extco.de>
