--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.12.1
+    2017-07-13
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #119:  load real address instances
+
 3.12.0
     2017-06-23
     Daniel Lorenz <daniel.lorenz@extco.de>
