--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,14 @@
+3.12.2
+    2017-07-13
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #120: update canonical tag view helper
+
 3.12.1
     2017-07-13
     Daniel Lorenz <daniel.lorenz@extco.de>
 
-    * TASK #119:  load real address instances
+    * TASK #119: load real address instances
 
 3.12.0
     2017-06-23
