--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.12.3
+    2017-07-14
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #121: move makeCategorizable to TCA configuration
+
 3.12.2
     2017-07-13
     Daniel Lorenz <daniel.lorenz@extco.de>
