--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+4.0.0
+    2017-07-15
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #99: remove support for php versions 5.4 and 5.5
+    * TASK #101: remove TYPO3 6.2 compatibility
+
 3.12.4
     2017-07-18
     Daniel Lorenz <daniel.lorenz@extco.de>
