--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.12.4
+    2017-07-18
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #124:  addToCartByAjax uses the normal process
+
 3.12.3
     2017-07-14
     Daniel Lorenz <daniel.lorenz@extco.de>
