[TASK] #117 - move validation configuration to settings part and respect configuration in view

--- a/Documentation/Misc/Changelog/4.0.0.rst
+++ b/Documentation/Misc/Changelog/4.0.0.rst
@@ -53,3 +53,8 @@ absichert. Dazu gehört auch das Parsen von TypoScript-Konfigurationen. Weitere 
 =======================================================
 
 TODO
+
+#117 Konfigurierbare Validierung für Formularfelder
+===================================================
+
+TODO
