--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -3,6 +3,9 @@
     <file source-language="en" datatype="plaintext" original="messages" date="2015-02-03T16:30:00Z" product-name="cart">
         <header/>
         <body>
+            <trans-unit id="validator.notempty.empty">
+                <source>The given subject was not empty.</source>
+            </trans-unit>
 
             <trans-unit id="tx_cart.plugin.mini_cart.empty_cart">
                 <source>Cart is empty.</source>
