[TASK] #92 #123 #117 - add some documentation

--- a/Documentation/Misc/Changelog/4.0.0.rst
+++ b/Documentation/Misc/Changelog/4.0.0.rst
@@ -56,7 +56,43 @@ Erweiterungen abzuschließen. Für Cart wird geprüft, in wie weit eine Beteilig
 #92 Währungsumrechnung und Neuberechnung der Steuern
 ====================================================
 
-TODO
+Das neue Feature bringt ein neues Plugin und eine neue Action im Warenkorb mit, mit der der Kunde die angezeigte Währung
+im Warenkorb wechseln kann. Diese wird wie folgt konfiguriert.
+
+::
+
+    plugin.tx_cart {
+        settings {
+            currencies {
+                default = 1
+                1 {
+                    code = EUR
+                    sign = €
+                    translation = 1.00
+                }
+                2 {
+                    code = CHF
+                    sign = CHF
+                    translation = 1.07123704
+                }
+            }
+        }
+    }
+
+|
+
+Man kann hier beliebig viele Währungen anlegen. Der Währungscode wird für einige Payment Anbieter und den Request
+benötigt. Das Währungssymbol wird dann beim Nutzer ausgegeben. Der Währungsumrechnungsfaktor gibt hier an, wie die
+Preise der Produkte in die Fremdwährung umgerechet werden.
+
+Beispiel:
+
+Das Produkt ist mit 10.00 € gepflegt. Der Umrechnungsfaktor für Schweizer Franken ist mit 1.07123704 angegeben, dann
+ist der resultierende Preis 9,34 CHF. Der Preis wird also durch den Faktor dividiert.
+
+.. NOTE::
+   Im Moment gibt es noch keinen Automatismus den Faktor zu aktualisieren und an einen aktuellen Wert anzupassen. Mit
+   einem kleinen Scheduler-Task sollte aber recht schnell ein entsprechender Service angebunden werden können.
 
 .. IMPORTANT::
    Da die Währung auch in der Bestellung gespeichert wird, ist eine Aktualisierung der Datenbank erforderlich. Da nur
@@ -71,12 +107,146 @@ absichert. Dazu gehört auch das Parsen von TypoScript-Konfigurationen. Weitere 
 #123 Zonenkonfiguration für Bezahl- und Versandmethoden
 =======================================================
 
-TODO
+Neben der noch recht neuen Konfiguration für verschiedene Länder Bezahl- und Versandmethoden konfigurieren zu können ist
+es manchmal gewünscht in viele Länder liefern zu können ohne jeweils eine eigene Konfiguration zu hinterlegen. Daher
+können nun Zonenkonfigurationen hinterlegt werden. Diese werden genutzt, falls es keine direkte Konfiguration für dieses
+Land gibt.
+
+::
+
+    plugin.tx_cart {
+        shippings {
+            countries {
+                de {
+                    preset = 1
+                    options {
+                        1 {
+                            title = Standard
+                            extra = 4.95
+                            taxClassId = 1
+                            status = open
+                        }
+                    }
+                }
+            }
+            zones {
+                1 {
+                    preset = 1
+                    countries = at,ch
+                    options {
+                        1 {
+                            title = Standard
+                            extra = 10.95
+                            taxClassId = 1
+                            status = open
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+|
+
+Die Konfiguration einer Zone entspricht der Konfiguration für Länder, erfordert aber eine zusätzlich Konfiguration,
+für welche Länder diese Zonenkonfiguration gültig ist.
+
+.. NOTE::
+   Um die Konfiguration übersichtlicher gestalten zu können wurde die Länderspezifische Konfiguration noch einmal in countries
+   gruppiert. Die Anpassung dieser Konfiguration ist aktuell noch nicht zwingend erforderlich, soll aber in den kommenden
+   Versionen der Standard werden.
 
 #117 Konfigurierbare Validierung für Formularfelder
 ===================================================
 
-TODO
+Da nicht alle Integrationen des Warenkorbs alle Felder für die Adresseingabe als Pflichtfelder benötigen, wurden die
+Validatoren im Model entfernt. Damit trotzdem eine serverseitige Konfiguration stattfindet, werden diese im Controller
+dynamisch hinzugefügt. Die Standardkonfiguration, die die Cart setup.txt spiegelt die bisherige Konfiguration im Model
+wieder.
+
+::
+
+    plugin.tx_cart {
+        settings {
+            validation {
+                orderItem {
+                    fields {
+                        acceptTerms {
+                            validator = Boolean
+                            options.is = true
+                        }
+                        acceptConditions {
+                            validator = Boolean
+                            options.is = true
+                        }
+                    }
+                }
+                billingAddress {
+                    fields {
+                        salutation {
+                            validator = NotEmpty
+                        }
+                        firstName {
+                            validator = NotEmpty
+                        }
+                        lastName {
+                            validator = NotEmpty
+                        }
+                        email {
+                            validator = NotEmpty
+                        }
+                        street {
+                            validator = NotEmpty
+                        }
+                        zip {
+                            validator = NotEmpty
+                        }
+                        city {
+                            validator = NotEmpty
+                        }
+                    }
+                }
+                shippingAddress {
+                    fields {
+                        salutation {
+                            validator = NotEmpty
+                        }
+                        firstName {
+                            validator = NotEmpty
+                        }
+                        lastName {
+                            validator = NotEmpty
+                        }
+                        email {
+                            validator = NotEmpty
+                        }
+                        street {
+                            validator = NotEmpty
+                        }
+                        zip {
+                            validator = NotEmpty
+                        }
+                        city {
+                            validator = NotEmpty
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+|
+
+Um ein Feld von den Pflichtfeldern auszunehmen, kann einfach die Konfiguration entfernt aus dem TypoScript entfernt
+werden. Andererseits können aber auch andere Felder zu den Pflichtfeldern hinzugefügt werden.
+Die angepassten Templates nutzen die Konfiguration im TypoScript ebenfalls und fügen entsprechend das Asterix (*) zum
+Label hinzu und das required-Attribut am Eingabefeld. Eine Anpassung des Templates ist dafür also nicht zwingend
+notwendig.
+
+.. NOTE::
+   Cart bringt auch einen eigenen Empty Validator mit, der prüft, ob ein Feld auch wirklich leer bleibt. Zusätzlich
+   wird das Feld nicht im Frontend dargestellt, wenn der Empty Validator verwendet wird.
+
 
 #125 Überarbeitung der E-Mail-Templates
 =======================================
