--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+4.0.1
+    2017-07-21
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #128: add missing order address discriminator
+
 4.0.0
     2017-07-20
     Daniel Lorenz <daniel.lorenz@extco.de>
