--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+3.12.5
+    2017-07-21
+    Andreas Beyl
+
+    * BUGFIX #129: add missing semicolons and fix double-declaration of var message
+
 3.12.4
     2017-07-21
     Daniel Lorenz <daniel.lorenz@extco.de>
