[TASK] #130 - add codacy batch

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+4.0.3
+    2017-07-21
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #130: add codacy batch
+
 4.0.2
     2017-07-21
     Andreas Beyl
