--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,20 @@
-3.12.5
+3.12.6
     2017-07-21
     Andreas Beyl
 
     * BUGFIX #129: add missing semicolons and fix double-declaration of var message
 
-3.12.4
+3.12.5
     2017-07-21
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * BUGFIX #128: add missing order address discriminator
+
+3.12.4
+    2017-07-18
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #124:  addToCartByAjax uses the normal process
 
 3.12.3
     2017-07-14
