--- a/Documentation/Misc/Changelog/3.12.4.rst
+++ b/Documentation/Misc/Changelog/3.12.4.rst
@@ -3,62 +3,27 @@
 .. --------------------------------------------------
 .. -*- coding: utf-8 -*- with BOM.
 
-3.12.4 - 21.07.2017
+3.12.4 - 18.07.2017
 -------------------
 
-Dieses Release-Version behebt einen Fehler beim Speichern der Rechnungs- und Versandadresse. Beide Adressen landen in
-der gleichen Datenbanktabellen. Wegen eines fehlenden Discriminatorfeldes kann dann nicht mehr zwischen den beiden
-Adressen unterschieden werden.
+Auf Grund der Art und Weise wie das Formular, um Produkte in den Warenkorb zu legen, einbunden wird, funktioniert die
+Konfiguration zum Hinzufügen über AJAX nicht mehr korrekt.
+Da es eh sehr verwirrend ist, wenn bei der Verwendung mehrere Plugins innerhalb eines Shops das Verhalten unterschiedlich
+konfiguriert wäre, wurde das Feld im Plugin entfernt und nun über TypoScipt gesetzt.
 
-.. Important::
-   Ein neues Feld muss der Adresstabelle in der Datenbank hinzugefügt werden. Dieses Feld wird mit der Zeichenkette
-   "billing" vorbelegt um im Backend die falsch gepflegten Adressen anzeigen lassen zu können. Alle neuere Bestellungen
-   sollten ab jetzt richtig gespeichert werden.
+::
 
-Wer seine alten Bestellungen entsprechend aktualisieren möchte, kann folgende Queries (MySQL) ausführen.
+   plugin.tx_cart {
+       settings {
+            addToCartByAjax = 1
+       }
+   }
 
-.. ATTENTION::
-   Die erste Query zeigt nur die Bestellungen an, wo es mindestens zwei Adressen gibt. Gelöschte Adressen werden nicht
-   angezeigt.
-   Diese Query kann ohne Veränderung der Daten auf der Datenbank ausgeführt werden. Das Ergebnis sollte dazu genutzt
-   werden, im Backend mindestens exemplarisch zu überprüfen, ob die gefundenen Bestellungen korrekt sind.
+|
 
-    ::
+Weiterhin fand eine Optimierung bei der URL-Generierung statt. Statt den Page Type per JavaScript anzuhängen wird dieser
+nun direkt im Fluid-ViewHelper gesetzt.
 
-        SELECT
-            address_s.item, address_b.uid, address_b.discr, address_s.uid, address_s.discr
-        FROM
-            tx_cart_domain_model_order_address AS address_s
-        LEFT JOIN
-            tx_cart_domain_model_order_address AS address_b
-            ON address_s.item = address_b.item
-        WHERE
-            address_b.uid < address_s.uid
-            AND address_s.deleted = 0
-            AND address_b.deleted = 0
-            AND address_s.item > 0;
-
-    |
-
-.. DANGER::
-   Die folgende Query verändert die Bestelldaten in der Datenbank. Ein Backup der Datenbank sollte unbedingt vor dem
-   Ausführen erfolgen.
-   Ziel dieser Query ist, für die zweiten Adressen einer Bestellung das neue Datenbankfeld auf "shipping" zu stellen,
-   damit auch im Backend die Versandadresse richtig ausgegeben wird.
-
-    ::
-
-        UPDATE
-            tx_cart_domain_model_order_address as address_s
-        LEFT JOIN
-            tx_cart_domain_model_order_address as address_b
-            ON address_b.item = address_s.item
-        SET
-            address_s.discr = "shipping"
-        WHERE
-            address_b.uid < address_s.uid
-            AND address_b.deleted = 0
-            AND address_s.deleted = 0
-            AND address_b.item > 0;
-
-    |
+.. IMPORTANT::
+   * Wer Produkte per AJAX zum Warenkorb hinzufügen möchte, muss die neue TypoScript-Konfigurationsvariable setzen.
+   * Ein eigenes Resources/Private/Partials/Product/CartForm.html Template oder JavaScript muss dahingehend angepasst werden.
