--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+4.0.4
+    2017-07-21
+    Andreas Beyl
+
+    * BUGFIX #131: handle required-attribute for additional fields
+
 4.0.3
     2017-07-21
     Daniel Lorenz <daniel.lorenz@extco.de>
