--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+4.0.6
+    2017-07-26
+    Daniel Lorenz <https://github.com/extcode>
+
+    * TASK #135: old function was called in OrderController on generate invoice pdf action when no invoice number exists
+
 4.0.5
     2017-07-21
     Daniel Lorenz <https://github.com/extcode>
