--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+4.0.7
+    2017-08-10
+    Daniel Lorenz <https://github.com/extcode>
+
+    * BUGFIX #138: handle stock in backend variants does not update the repository
+
 4.0.6
     2017-07-26
     Daniel Lorenz <https://github.com/extcode>
