--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+4.0.9
+    2017-08-11
+    Daniel Lorenz <https://github.com/extcode>
+
+    * BUGFIX #140: product will not load in showFormAction
+
 4.0.8
     2017-08-10
     Daniel Lorenz <https://github.com/extcode>
