[TASK] #137 - add realurl hook and new page doktypes

--- a/Documentation/Misc/Changelog/3.0.0.rst
+++ b/Documentation/Misc/Changelog/3.0.0.rst
@@ -207,7 +207,7 @@ Eine Beispielkonfiguration (Auszug) für realurl könnte wie folgt aussehen:
                 'noMatch' => 'bypass'
             ]
         ],
-        'cartDetailConfiguration' => [
+        'cartShowCart' => [
             [
                 'GETvar' => 'tx_cart_product[product]',
                 'lookUpTable' => [
