--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+4.1.0
+    2017-08-16
+    Daniel Lorenz <https://github.com/extcode>
+
+    * TASK #137: add hook to ease the realurl configuration
+
 4.0.9
     2017-08-11
     Daniel Lorenz <https://github.com/extcode>
