--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -948,6 +948,13 @@
             <trans-unit id="tx_cart.settings.allowed_countries.ch">
                 <source>Switzerland</source>
             </trans-unit>
+
+            <trans-unit id="pages.doktype.181">
+                <source>Cart: Cart</source>
+            </trans-unit>
+            <trans-unit id="pages.doktype.182">
+                <source>Cart: Product</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
